--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# project-specific gitignore file for Python projects
+scripts/
+logs/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
